--- a/style.css
+++ b/style.css
@@ -86,6 +86,9 @@ first section->title - info and image
     margin-left: 100px;
     
 }
+.title-img img:hover{
+    transform: scale(1.3);
+}
 .title-info .preebook-button{
     text-decoration: none;
     color: white;
@@ -112,10 +115,10 @@ second-section->web - sites
 .websites{
     display: grid;
     grid-template-columns: repeat(7,1fr);
-    grid-gap:50px ;
-   
-  
-   
+    grid-gap:50px ;     
+}
+.websites img:hover{
+    transform: scale(1.3);
 }
 
 /* ---------------------------------
@@ -142,11 +145,18 @@ margin-bottom: 30px;
 }
  .products{
     box-shadow: 10px gray;
+    
+}
+.collection-banner{
+    overflow: hidden;
 }
 .collection-banner img{
     width: 300px;
     height: 256px;
 
+}
+.collection-banner img:hover{
+    transform: scale(1.3);
 }
 .collection-info .collection-title{
     font-weight: 500;
@@ -195,14 +205,20 @@ margin-bottom: 30px;
     width: 1050px;
     margin-bottom: 40px;
     
+    
 }
-
+.fourth-section .photography-img{
+    overflow: hidden;
+}
 
 .photography-img img{
     width: 300px;
     height: px;
-    margin-left: 100px;
+    margin-left: 100px;  
     
+}
+.photography-img img:hover{
+    transform: scale(1.5);
 }
 .photography-info h1{
     font-weight: bold;
@@ -241,11 +257,17 @@ footer{
     grid-template-columns: repeat(4,1fr);
     grid-column-gap: 20px;
 }
+
+
 /************************************************************************/
 
-/*
-Responsive for mobile 
-*/
+
+
+/*----------------------------------------
+Responsive for ---------iphone XR 
+------------------------------------------*/
+
+
 @media only screen and (max-width:414px){
     .container{
         width:100%;
@@ -326,21 +348,14 @@ footer{
     display: grid;
     grid-template-columns: repeat(4,1fr);
 }
+
 }
 
 
 
-
-
-
-
-
-
-
-/*
-Responsive for tab
-*/
-
+/*-----------------------------------------
+Responsive for ---------ipad air
+-----------------------------------------------*/
 
 
 @media only screen and (min-width:768px) and (max-width:1024px){
